Fix <p> spacing on warning dialogs.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -152,6 +152,7 @@ a:hover {
 }
 
 .warning p {
+    line-height:18px;
     margin:2px 0px;
     padding:0px;
 }
